[gd_scene load_steps=2 format=3 uid="uid://drq9ymvxnwx2e"]

[ext_resource type="Script" path="res://scripts/ui/stats_overlay.gd" id="1"]

[node name="StatsOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="StatsPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 350.0
offset_bottom = 220.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="StatsPanel/MarginContainer"]
layout_mode = 2

[node name="FPSLabel" type="Label" parent="StatsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "FPS: --"

[node name="FrameTimeLabel" type="Label" parent="StatsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Frame: --ms"

[node name="QualityLabel" type="Label" parent="StatsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quality: Medium"

[node name="LoadLabel" type="Label" parent="StatsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load: 0%"

[node name="CPULabel" type="Label" parent="StatsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "CPU: --%"

[node name="TempLabel" type="Label" parent="StatsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Temp: --°C"

[node name="StatusLabel" type="Label" parent="StatsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Status: Initializing..."

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 240.0
offset_right = 350.0
offset_bottom = 267.0
max_value = 60.0
show_percentage = false

[node name="ProgressLabel" type="Label" parent="ProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "0 / 60s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ThrottleWarning" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 280.0
offset_right = 350.0
offset_bottom = 310.0
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 18
text = "⚠ THERMAL THROTTLING"
horizontal_alignment = 1

[node name="DebugInfo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -310.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 150.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 11
text = "[Debug Controls]
Space - Pause/Resume
Q/E - Quality Down/Up
R - Reset
T - Quick Test (10s)
V - Verbose Logging
Esc - Exit"

